--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@
     box-sizing: border-box;
 }
 
+.logo{
+    font-size: 5rem;
+    color: #175921;
+}
+
 body {
     font-family: 'Crimson Pro', serif;
 
@@ -21,6 +26,8 @@ p {
     font-family: 'Gill Sans','Gill Sans MT',Calibri,Arial,sans-serif;
 }
 
+
+
 .btn {
     display: block;
     font-family: 'Gill Sans', 'Gill Sans MT', sans-serif;
@@ -28,6 +35,24 @@ p {
     padding:10px;
     margin:1px;
     text-transform: uppercase;
+}
+
+.bar{
+    transition: text-decoration 0.1s ease-in-out;
+}
+
+.bar:hover{
+    text-decoration: underline;
+}
+
+.navbars .secondary .btn{
+    transition: background-color 0.4s ease-in-out;
+    transition: color 0.4s ease-in-out;
+}
+
+.navbars .secondary .btn:hover{
+    color: black;
+    background-color: rgb(238, 235, 235);
 }
 
 .btn.drop-down .icon {
@@ -43,6 +68,36 @@ p {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.main_nav_child {
+    padding-bottom: 2rem;
+}
+
+.main_nav_link{
+    transition: color 0.1s ease-in-out;
+}
+
+.main_nav_link:hover{
+    color: #286dc0;
+}
+
+.main_nav_child_link:hover{
+    color: blue;
+}
+
+.main_nav_child_link {
+    transition: color 0.2s ease-in-out;
+    line-height: 2.5rem;
+    font-size: 1.25rem;
+    text-decoration: none;
+    color: black;
+}
+
+.line3{
+    border-bottom: rgb(58, 58, 58) solid 0.5px;
+}
+
+
 
 header {
     display: flex;
@@ -94,6 +149,20 @@ header nav.main {
 
 header nav.main .main_nav_item {
     padding: 1rem;
+}
+
+.covid-banner{
+    background-color: rgb(27, 170, 22);
+    padding: 1.25rem;
+    
+    
+}
+
+.covid-banner .container a{
+    font-size: 1.25rem;
+    color: #000000;
+    text-decoration: none;
+   
 }
 
 .main_nav_item {
@@ -150,6 +219,41 @@ header nav.main .main_nav_item {
     grid-column: 1/3;
     grid-row: 2/3;
     z-index: 1;
+   
+}
+
+.hero .text h2{
+    padding-top: 4rem;
+    font-size: 1.25rem;
+    text-decoration:solid;
+}
+
+.hero .text h1{
+    font-size: 2.5rem;
+    padding-right: 12rem;
+    color: darkblue;
+    padding-bottom: 2rem;
+}
+
+.hero .text .btn{
+    border: black solid 1px;
+    max-height: 3rem;
+    max-width: 9.5rem;
+    transition: background-color 1s ease-in-out;
+    transition: color 0.4s ease-in-out;
+}
+
+.hero .text .btn:hover{
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+.hero .text p{
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+    padding-right: 12rem;
+    color: black;
+    padding-bottom: 2rem;
 }
 
 .hero .image {
@@ -163,6 +267,7 @@ header nav.main .main_nav_item {
 }
 
 .hero .feature-archive {
+
     grid-row: 3;
     grid-column: 4;
     background-color:var(--grey-color);
@@ -173,4 +278,853 @@ header nav.main .main_nav_item {
     text-align: center;
     padding: 20px;
     text-decoration: none;;
+}
+
+
+.headings h2{
+    color: var(--secondary-color);
+    font-size: 1.25rem;
+    padding-top: 4rem;
+}
+
+
+.headings h3{
+    color:var(--primary-color);
+    font-size: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 6rem;
+}
+
+
+
+
+ .small_image{
+   object-fit: cover;
+}
+
+
+
+.layer{
+    z-index: 2;
+}
+
+.item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: #000;
+    opacity: .6;
+}
+
+
+
+.explore_topics_divider {
+    margin: 26px 0;
+
+}
+
+.color_white{
+    color: #e7e7e7;
+
+}
+
+.explore_topics_divider {
+    font-family: Mallory,'Gill Sans','Gill Sans MT',Calibri,Arial,sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    font-size: .9375rem;
+    line-height: 1.2;
+    position: relative;
+    margin: 18px 0;
+    text-align: center;
+}
+
+.shuffle_btn{
+    height: 50px;
+    line-height: 50px;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+    font-size: 14px;
+    font-size: .875rem;
+    line-height: 1.21428571;
+    font-family: Mallory-Medium,'Gill Sans','Gill Sans MT',Calibri,Arial,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: .75px;
+    word-spacing: 1.25px;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 16px 20px;
+    transition: color .25s,background .25s,border .25s,box-shadow .25s;
+    border: 1px solid #e7e7e7;
+    background: 0 0;
+    width: 100%;
+}
+
+
+
+.grid{
+    background-color: #175921;
+
+    
+}
+
+.grid-wrapper {
+
+	display: grid;
+    justify-content: center;
+    align-content: center;
+    /* grid-template-columns: ( 4fr, 4fr, 4fr, 4fr, 4fr, 4fr, 4fr);
+    grid-template-rows: ( 4fr, 4fr, 4fr, 4fr, 4fr, 4fr, 4fr ); */
+	grid-template-columns: 2fr 1fr 1fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr 1fr 1fr 2fr;
+    max-width: 1000px;
+    margin: 0 auto;
+    
+    position: relative;
+    top: -60px;
+    
+    padding-bottom: 5rem;
+	/* grid-auto-flow: dense; */
+   
+
+    
+    
+}
+
+/* Main CSS */
+.grid-wrapper > div {
+
+	justify-content: center;
+	align-items: center; 
+    aspect-ratio: 1/1;
+    height: 100%;
+    
+}
+.grid-wrapper > div > img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 5px;
+    position: relative;
+
+    /* max-height: 100%; */
+}
+
+
+
+/* repeat(auto-fit, minmax(225px, 1fr)); */
+
+.small_text{
+    display: flex;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 25%;
+    font-size: 4rem;
+    width: 100%;
+}
+
+.small_text h2 {
+    width:100%;
+    text-align: center;
+}
+
+.small_text_3{
+    display: flex;
+    align-items: flex-end;
+    position: absolute;
+    background: rgba(#000, 0.45);
+    color: rgb(255, 255, 255);
+    top: 25%;
+    font-size: 4rem;
+   
+    
+}
+
+
+.one .border4 {
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+    height: 70px;
+    line-height: 70px;
+    font-size: 14px;
+    font-size: .875rem;
+    line-height: 1.21428571;
+    font-family: Mallory-Medium,'Gill Sans','Gill Sans MT',Calibri,Arial,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: .75px;
+    word-spacing: 1.25px;
+    text-transform: uppercase;
+    height: 50px;
+    border: none;
+    border-radius: 0;
+    line-height: 50px;
+    padding: 0 40px 0 20px;
+    transition: background .25s,color .25s;
+    color: #286dc0;
+    background-color: #fff;
+    width: 100%;
+}
+
+
+
+.one {
+    display: block;
+    padding-right: 30px;
+    padding-left: 30px;
+    background-color: #286dc0;
+    padding: 20px 20px 20px;
+    grid-column: 1;
+    grid-row: 2;
+    grid-column: 1;
+    grid-row: 2;
+    position: relative;
+    z-index: 2;
+}
+
+.small_text2:hover{
+    margin-top: -15px;
+}
+
+.overlay2:hover{
+    opacity: .75;
+}
+
+
+.overlay2{
+    transition: opacity 0.2s ease-in-out;
+    height: 100%;
+    width: 100%;
+    opacity: .50;
+    background: linear-gradient(rgba(255, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.small_text2{
+    transition: margin 0.2s ease-in-out;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 45%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.small_text2 h2 {
+    font-size: 1.75rem;
+    width:100%;
+    text-align: left;
+}
+
+.small_text2 h3 {
+    width:100%;
+    text-align: left;
+    padding-top: 1rem;
+    color: #00bfff;
+}
+
+
+.two {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    position: relative;
+    z-index: 2;
+    height: 10rem;
+    
+}
+
+.small_text3{
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 40%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+}
+
+.small_text3 h2 {
+    font-size: 2.5rem;
+    width:100%;
+    text-align: center;
+}
+
+.small_text3 h3 {
+    width:100%;
+    text-align: left;
+    padding-left: 1.25rem;
+    padding-top: 1rem;
+    color: #00bfff;
+}
+
+.small_text3:hover{
+    margin-top: -15px;
+}
+
+.overlay3:hover{
+    opacity: .75;
+}
+
+.overlay3{
+    transition: opacity 0.2s ease-in-out;
+    height: 100%;
+    width: 100%;
+    opacity: .50;
+    background: linear-gradient(rgba(255, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.three {
+    grid-column: 1;
+    grid-row: 3/4;
+    position: relative;
+    z-index: 2;
+    
+   
+}
+
+.small_text4{
+    transition: margin 0.2s ease-in-out;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 40%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+}
+
+.small_text4 h2 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 2.25rem;
+    width:100%;
+    text-align: left;
+}
+
+.small_text4 h3 {
+    width:100%;
+    text-align: left;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    color: #00bfff;
+}
+
+.small_text4:hover{
+    margin-top: -15px;
+}
+
+.overlay4:hover{
+    opacity: .75;
+}
+
+
+.overlay4{
+    transition: opacity 0.2s ease-in-out;
+    height: 100%;
+    width: 100%;
+    opacity: .50;
+    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.four {
+    grid-column: 2/4;
+    grid-row: 3/4;
+    position: relative;
+    z-index: 2;
+}
+
+.five .small_text5 .button{
+    transition: background-color 0.2s ease-in-out;
+    padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 15rem;
+}
+
+.five .small_text5 .button .shuffle_btn:hover{
+    background-color: darkgreen;
+}
+
+.small_text5{
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 10%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+}
+
+.line5{
+    margin-left: 2rem;
+    border-top: solid green 5px;
+    width: 3rem;
+    
+}
+
+.small_text5 h1 {
+    padding-left: 2rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    font-size: 4rem;
+    width:100%;
+    text-align: left;
+    color: darkgreen;
+}
+
+.small_text5 h2 {
+    padding-left: 2rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    width:100%;
+    text-align: left;
+    color: darkgreen;
+}
+
+.small_text5 h3 {
+    line-height: 1.5rem;
+    width:100%;
+    text-align: left;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    color: black;
+}
+
+.overlay5{
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(106, 106, 106, 0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.five {
+    grid-column: 1/4;
+    grid-row: 4/7;
+    position: relative;
+    z-index: 2;
+    
+}
+
+.small_text6{
+    transition: margin 0.2s ease-in-out;
+    position: absolute;
+    color: whitesmoke;
+    top: 30%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+}
+
+.small_text6 h2 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 2rem;
+    width:100%;
+    text-align: left;
+}
+
+.small_text6 h3 {
+    width:100%;
+    text-align: left;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    color: #00bfff;
+}
+
+.small_text6:hover{
+    margin-top: -15px;
+}
+
+.overlay6:hover{
+    opacity: .75;
+}
+
+
+.overlay6{
+    transition: opacity 0.2s ease-in-out;
+    height: 100%;
+    width: 100%;
+    opacity: .70;
+    background: linear-gradient(rgba(255, 145, 0, 0.8), rgba(0, 0, 0, 0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.six {
+    grid-column: 4/5;
+    grid-row: 4/6;
+    position: relative;
+    z-index: 2;
+   
+}
+.small_text7{
+    transition: margin 0.2s ease-in-out;
+    position: absolute;
+    color: whitesmoke;
+    top: 60%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+}
+
+.small_text7 h2 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 2rem;
+    width:100%;
+    text-align: left;
+}
+
+.small_text7 h3 {
+    width:100%;
+    text-align: left;
+    font-size: 1.3rem;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    color: #00bfff;
+}
+
+.small_text7:hover{
+    margin-top: -15px;
+}
+
+
+
+.seven {
+    grid-column: 5/6;
+    grid-row: 4/6;
+    position: relative;
+    z-index: 2;
+    
+}
+
+
+
+.eight {
+    grid-column: 4/5;
+    grid-row: 6/7;
+    position: relative;
+    z-index: 2;
+   
+}
+
+
+.overlay2:hover{
+    opacity: .75;
+}
+
+
+.overlay9{
+    transition: opacity 0.2s ease-in-out;
+    height: 100%;
+    width: 100%;
+    opacity: .50;
+    background: linear-gradient(rgba(222, 19, 19, 0.8), rgba(0, 255, 8, 0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.nine {
+    grid-column: 5/6;
+    grid-row: 6/7;
+    position: relative;
+    z-index: 2;
+    
+}
+
+
+
+
+
+.ten .small_text10 .button2{
+    transition: background-color 0.2s ease-in-out;
+    padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 15rem;
+}
+
+.ten .small_text10 .button2 .shuffle_btn:hover{
+    background-color: darkgreen;
+}
+
+.small_text10{
+    margin-left: 10rem;
+    padding-right: 10rem;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 25%;
+    font-size: 1rem;
+    width: 100%;
+    z-index: 1;
+}
+
+.line10{
+    margin-left: 2rem;
+    border-top: solid rgb(255, 255, 255) 5px;
+    width: 3rem;
+    
+}
+
+.small_text10 h1 {
+    padding-left: 2rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    font-size: 3rem;
+    width:100%;
+    text-align: left;
+    color: rgb(255, 255, 255);
+}
+
+.small_text10 h2 {
+    padding-left: 2rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    width:100%;
+    text-align: left;
+    color: rgb(255, 255, 255);
+}
+
+.small_text10 h3 {
+    line-height: 2.5rem;
+    width:100%;
+    text-align: left;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    color: rgb(255, 255, 255);
+}
+
+.overlay1{
+    height: 100%;
+    width: 100%;
+    opacity: .50;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+    position: absolute;
+    z-index: 1;
+}
+
+.ten {
+    grid-column: 3/7;
+    grid-row: 1/5;
+    position: relative;
+    z-index: 1;
+    /* margin: -40px 10px; */
+    /* top: 155%; */
+}
+
+/* .blank4{
+    grid-column: span 1;
+    position: relative;
+    z-index: -1;
+    height: 15em;
+    width: 15em;
+}
+
+.blank5{
+    grid-column: span 1;
+    position: relative;
+    z-index: -1;
+    height: 15em;
+    width: 15em;
+} */
+
+
+
+
+footer {
+    padding: 4rem 0;
+    background-color:#282828;
+    display: flex;
+}
+
+.word{
+    padding: 1rem;
+    padding-left: 2rem;
+    max-width: 20rem;
+}
+
+.insta {
+    font-size:.85rem ;
+    margin-left: 8rem;
+    color: whitesmoke;
+    font-weight: bold;
+}
+
+
+
+.insta img{
+    position: absolute;
+    width: 20%;
+}
+
+.insta h2{
+    position: relative;
+    left: 20%;
+    padding-top: 15rem;
+}
+
+.word{
+    transition: color 0.2s ease-in-out;
+}
+
+.word:hover{
+    color: gray;
+}
+
+
+
+
+
+.region .region_footer{
+    display: grid;
+    /* justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap; */
+}
+
+
+
+.footer_nav_link{
+    /* padding: 1.5rem; */
+    /* padding: 1rem; */
+    font-size: 1.5rem;
+    color:#ddd;
+    
+}
+
+/* adjusts the whole column */
+.col1{
+    max-width: 18rem;
+    display: flexbox;
+    flex-wrap: wrap;
+
+}
+
+.col2{
+    max-width: 20rem;
+    display: flexbox;
+    flex-wrap: wrap;
+    padding-left: 1.25rem;
+
+}
+
+.col3{
+    
+    display: flexbox;
+    flex-wrap: wrap;
+}
+
+.col4{
+    max-width: 18rem;
+    display: flexbox;
+    flex-wrap: wrap;
+
+}
+
+.col5{
+    max-width: 20rem;
+    display: flexbox;
+    flex-wrap: wrap;
+
+}
+
+.col6{
+    padding-left: 4.5rem;
+    display: flexbox;
+    flex-wrap: wrap;
+
+}
+
+.test{
+    margin-top: 5rem;
+    background-color: var(--dark-color);
+    padding-top: 5rem;
+}
+
+.subtitle{
+    font-size:.85rem ;
+    margin-left: 8rem;
+    color: var(--secondary-color);
+    font-weight: bold;
+    
+}
+
+.line1{
+    margin-left: 8rem;
+    border-bottom: solid var(--secondary-color) 1px;
+    width: 3rem;
+    padding-top: 1rem;
+}
+
+.top{
+    display: flex;
+    max-width: 60rem;
+    color: white;
+}
+
+.bottom{
+    display: flex;
+    max-width: 60rem;
+    color: white;
+}
+
+
+
+.top_half {
+    display: flex;
+    justify-content: space-between;
+    margin-left:6rem ;
+    /* justify-content: space-around; */
+}
+
+.bottom_half {
+    display: flex;
+    justify-content: space-between;
+    margin-left:6rem ;
+}
+
+.end{
+    background-color: var(--dark-color);
+}
+
+.end2{
+    display: flex;
+    justify-content: space-between;
+}
+
+.left_end{
+    color: white;
+}
+
+.right_end{
+    color: white;
+}
+
+.line2{
+    margin-left: 8rem;
+    border-top: solid var(--grey-color) 1px;
+    width: 75rem;
+    padding-top: 4rem;
+}
+
+.line_main{
+    /* margin-left: 8rem; */
+    border-bottom: solid gray 0.5px;
+    width: 4rem;
+    padding-top: 1rem;
+}
+
+.divider {
+    padding-top: 1rem;
 }
